# detect_3d_cuboid_with_3d_IOU

./: CMakeLists.txt  README.md
data/: 0000_3d_cuboids (copy).txt  0000_3d_cuboids.txt  0001_3d_cuboids.txt  all_3d_cuboids_after_3d_IoU.txt
data/edge_detection/LSD/: 0000_online_edges.txt  0001_online_edges.txt  0002_online_edges.txt  0003_online_edges.txt
data/filter_2d_obj_txts/: 0000_yolo2_0.15.txt  0017_yolo2_0.15.txt
data/ground_truth/: online_camera.txt  online_cubes.txt
data/online_camera_pose/: online_camera.txt  online_cubes.txt
data/online_edge_detection/: 0000_online_edges.txt  0002_online_edges.txt  0003_online_edges.txt  0004_online_edges.txt  0005_online_edges.txt  0006_online_edges.txt  0007_online_edges.txt  0008_online_edges.txt  0009_online_edges.txt  0010_online_edges.txt  0011_online_edges.txt  0012_online_edges.txt  0013_online_edges.txt  0014_online_edges.txt  0015_online_edges.txt  0016_online_edges.txt  0017_online_edges.txt  0018_online_edges.txt  0019_online_edges.txt  0020_online_edges.txt  0021_online_edges.txt  0022_online_edges.txt  0023_online_edges.txt  0024_online_edges.txt  0025_online_edges.txt  0026_online_edges.txt  0027_online_edges.txt  0028_online_edges.txt  0029_online_edges.txt  0030_online_edges.txt  0031_online_edges.txt  0032_online_edges.txt  0033_online_edges.txt  0034_online_edges.txt  0035_online_edges.txt  0036_online_edges.txt  0037_online_edges.txt  0038_online_edges.txt  0039_online_edges.txt  0040_online_edges.txt  (+17 more)
data/orignal data/: output_obj_poses.txt
data/yolov3_bbox/: 0_yolov3_0.15.txt  100_yolov3_0.15.txt  101_yolov3_0.15.txt  102_yolov3_0.15.txt  103_yolov3_0.15.txt  104_yolov3_0.15.txt  105_yolov3_0.15.txt  106_yolov3_0.15.txt  107_yolov3_0.15.txt  108_yolov3_0.15.txt  109_yolov3_0.15.txt  10_yolov3_0.15.txt  110_yolov3_0.15.txt  111_yolov3_0.15.txt  112_yolov3_0.15.txt  113_yolov3_0.15.txt  114_yolov3_0.15.txt  115_yolov3_0.15.txt  116_yolov3_0.15.txt  117_yolov3_0.15.txt  118_yolov3_0.15.txt  119_yolov3_0.15.txt  11_yolov3_0.15.txt  120_yolov3_0.15.txt  121_yolov3_0.15.txt  122_yolov3_0.15.txt  123_yolov3_0.15.txt  124_yolov3_0.15.txt  125_yolov3_0.15.txt  126_yolov3_0.15.txt  127_yolov3_0.15.txt  128_yolov3_0.15.txt  129_yolov3_0.15.txt  12_yolov3_0.15.txt  130_yolov3_0.15.txt  131_yolov3_0.15.txt  132_yolov3_0.15.txt  133_yolov3_0.15.txt  134_yolov3_0.15.txt  135_yolov3_0.15.txt  (+775 more)
include/detect_3d_cuboid/: detect_3d_cuboid.h  object_3d_util.h
src/: box_proposal_detail.cpp  main.cpp  matrix_utils.cpp  object_3d_util.cpp
